backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safesteps-backend
spec:
  type: ClusterIP
  selector:
    app: safesteps-backend
  ports:
    - port: 3000
      targetPort: 3000
