dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safesteps-dashboard
spec:
  type: ClusterIP
  selector:
    app: safesteps-dashboard
  ports:
    - port: 3001
      targetPort: 3001
